@@ -2,6 +2,7 @@
 version 0.64, Feb 16, 2011
 ==========================
 
+  o configure: if possible, use ocamlfind to find lablgtk2 and sqlite3
   o algebraic types: must be well-founded, non-positive constructors
     are forbidden, recursive functions and predicates must
     structurally terminate
